@@ -4,12 +4,11 @@ package IPC::SRLock::Exception;
 
 use strict;
 use warnings;
+use version; our $VERSION = qv( sprintf '0.5.%d', q$Rev$ =~ /\d+/gmx );
 
 use Exception::Class
    'IPC::SRLock::Exception::Base' => { fields => [qw(args out rv)] };
 
-use overload '""' => sub { shift->to_string }, fallback => 1;
-use version; our $VERSION = qv( sprintf '0.5.%d', q$Rev$ =~ /\d+/gmx );
 use base qw(IPC::SRLock::Exception::Base);
 
 use Carp;
@@ -40,6 +39,19 @@ sub catch {
    return $e ? $self->new( error => $NUL.$e ) : undef;
 }
 
+sub full_message {
+   my $self = shift; my $text = $self->error or return;
+
+   # Expand positional parameters of the form [_<n>]
+   0 > index $text, '[_' and return $text;
+
+   my @args = @{ $self->args }; push @args, map { $NUL } 0 .. 10;
+
+   $text =~ s{ \[ _ (\d+) \] }{$args[ $1 - 1 ]}gmx;
+
+   return $text;
+}
+
 sub stacktrace {
    my $self = shift; my ($frame, $l_no, %seen, $text); my $i = 1;
 
@@ -68,19 +80,6 @@ sub throw_on_error {
    $e = $self->catch( @rest ) and $self->throw( $e );
 
    return;
-}
-
-sub to_string {
-   my $self = shift; my $text = $self->error or return;
-
-   # Expand positional parameters of the form [_<n>]
-   0 > index $text, '[_' and return $text;
-
-   my @args = @{ $self->args }; push @args, map { $NUL } 0 .. 10;
-
-   $text =~ s{ \[ _ (\d+) \] }{$args[ $1 - 1 ]}gmx;
-
-   return $text;
 }
 
 1;
@@ -118,6 +117,12 @@ but indirectly through L</catch> and L</throw>
 Catches and returns a thrown exception or generates a new exception if
 I<EVAL_ERROR> has been set
 
+=head2 full_message
+
+   $printable_string = $e->full_message
+
+What an instance of this class stringifies to
+
 =head2 stacktrace
 
    $lines = $e->stacktrace;
@@ -142,12 +147,6 @@ in this case
 
 Calls L</catch> and if the was an exception L</throw>s it
 
-=head2 to_string
-
-   $printable_string = $e->to_string
-
-What an instance of this class stringifies to
-
 =head1 Diagnostics
 
 None
@@ -161,9 +160,9 @@ should be suppressed in the stack trace output
 
 =over 3
 
-=item L<overload>
-
 =item L<Exception::Class>
+
+=item L<MRO::Compat>
 
 =item L<Scalar::Util>
 
