@@ -1,6 +1,7 @@
 Revision history for IPC::SRLock
 
 0.6
+        - Updated exception handling class
         - Fixed error handling in Sysv subclass
 
 0.5.154 - 2010-09-28
